--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -353,3 +353,140 @@ img {
 .button-light {
     background-color: var(--first-color-light);
 }
+
+.button-white {
+    background-color: var(--first-color-lighten);
+    color: var(--first-color-dark);
+}
+
+.button-white:hover {
+    background-color: var(--first-color-lighten);
+}
+
+
+/* about */
+.about__data {
+    text-align: center;
+}
+
+.about__description span {
+    font-size: var(--h2-font-size);
+    font-weight: var(--font-semi-bold);
+    color: var(--first-color);
+}
+
+.about__number {
+    font-size: var(--h1-font-size);
+    color: var(--first-color);
+    display: block;
+}
+
+.about__img {
+    justify-self: center;
+    width: 220px;
+    border-radius: .5rem;
+}
+
+
+/* proyectos */
+.qualification__container {
+    row-gap: 2.5rem;
+}
+
+.qualification__title {
+    font-size: var(--h3-font-size);
+    color: var(--first-color);
+    margin-bottom: var(--mb-2);
+    display: flex;
+    align-items: center;
+}
+
+.qualification__title-icon {
+    font-size: 1.5rem;
+    margin-right: var(--mb-1);
+}
+
+.qualification__box {
+    padding-bottom: 1rem;
+    border-bottom: 1px solid #ccc;
+}
+
+.qualification__area {
+    font-size: var(--normal-font-size);
+    color: var(--first-color);
+    margin-bottom: var(--mb-1);
+    font-weight: var(--font-medium);
+}
+
+.qualification__icon,
+.qualification__work {
+    font-size: var(--smaller-font-size);
+    color: var(--first-color-light);
+
+}
+
+.qualification__work {
+    display: block;
+}
+
+/* proyectos2 */
+.services__data {
+    padding: 3rem 1rem;
+    background-color: #fff;
+    border-radius: .5rem;
+    text-align: center;
+    transition: .4s;
+    box-shadow: 0 4px 6px rgba(174, 190, 205, .3);
+}
+
+.services__icon,
+.services__title {
+    margin-bottom: var(--mb-2);
+    color: var(--first-color);
+
+}
+
+.services__icon {
+    font-size: 3rem;
+}
+
+.services__title {
+    font-size: var(--h3-font-size);
+}
+
+.services__description {
+    margin-bottom: var(--mb-4);
+}
+
+.services__data:hover {
+    transform: translateY(-.5rem);
+    box-shadow: 0 6px 8px rgba(174, 190, 205, .4);
+}
+
+
+/* proyectos futuros */
+
+.project__container {
+    padding: 1.5rem 1rem;
+    background-color: var(--first-color-dark);
+    color: var(--first-color-lighten);
+    border-radius: .5rem;
+    text-align: center;
+}
+
+.project__icon,
+.project__title {
+    margin-bottom: var(--mb-1);
+}
+
+.project__icon {
+    font-size: 3.5rem;
+}
+
+.project__title {
+    font-size: 1.5rem;
+}
+
+.project__description {
+    margin-bottom: var(--mb-4);
+}
