--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -363,6 +363,16 @@ img {
     background-color: var(--first-color-lighten);
 }
 
+.button-link {
+    background: none;
+    color: var(--first-color);
+    padding: 0;
+}
+
+.button-link:hover {
+    background: none;
+}
+
 
 /* about */
 .about__data {
@@ -489,4 +499,57 @@ img {
 
 .project__description {
     margin-bottom: var(--mb-4);
+}
+
+/* galeria */
+.portfolio__nav {
+    text-align: center;
+    margin-bottom: var(--mb-3);
+}
+
+.portfolio__item {
+    margin: 0 var(--mb-2);
+    cursor: pointer;
+}
+
+.porfolio__content {
+    background-color: #fff;
+    border-radius: .5rem;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(174, 190, 205, .3);
+}
+
+.portfolio__img {
+    width: 100%;
+    transition: .4s;
+}
+
+.portfolio__data {
+    padding: 1.5rem;
+}
+
+.portfolio__subtitle {
+    font-size: var(--small-font-size);
+    color: var(--first-color-light);
+}
+
+.portfolio__title {
+    font-size: var(--h3-font-size);
+    color: var(--first-color);
+    margin: var(--mb-2) 0;
+}
+
+.portfolio__content:hover {
+    box-shadow: 0 6px 8px rgba(174, 190, 205, .4);
+}
+
+.portfolio__content:hover .portfolio__img {
+    transform: scale(1.02);
+}
+
+/* activar el menu de galeria */
+
+.active-portfolio {
+    color: var(--first-color-dark);
+    font-weight: var(--font-semi-bold);
 }
