--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -275,8 +275,36 @@ img {
 
 /* home */
 .home {
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(102,11,9,1) 100%, rgba(0,212,255,0) 100% ) ;
-    overflow: hidden;
+
+    width: 100%;
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
+    min-height: 500px;
+    background-image: url('../img/homePhoto.jpeg');
+    background-repeat: no-repeat;
+    position: relative;
+    z-index: 1;
+    /* background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(102, 11, 9, 1) 100%, rgba(0, 212, 255, 0) 100%);
+    overflow: hidden; */
+}
+
+.home::after {
+    content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right top, #000000b7, #5c0000a2, #79000099, #3d131399, #00000099);
+  z-index: -1;
+}
+
+
+.img__headerMain {
+    width: 80%;
+    height: 100%;
+    
 }
 
 .home__container {
@@ -301,7 +329,7 @@ img {
 
 .home__greeting,
 .home__profession {
-    
+
     display: block;
     font-weight: var(--font-bold);
 }
@@ -311,7 +339,7 @@ img {
 }
 
 .home__profession {
-    
+
     font-size: .938rem;
     margin-bottom: var(--mb-3);
 }
@@ -721,7 +749,7 @@ img {
         width: 330px;
     }
 
-    
+
 
     .about__container,
     .services__container,
